--- a/.gitignore
+++ b/.gitignore
@@ -277,6 +277,7 @@ __pycache__/
 # Cake - Uncomment if you are using it
 tools/**
 !tools/packages.config
+v*.*cake.ps1
 
 # Telerik's JustMock configuration file
 *.jmconfig
